[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://new_bullet_system/BulletEmmiter.tscn" type="PackedScene" id=2]
[ext_resource path="res://test_world.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=2]
0/name = "icon.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -589840, 0, 0, -589839, 0, 0, -589838, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 0, 0, -589830, 0, 0, -589829, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 0, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -655351, 0, 0, -655350, 0, 0, -655349, 0, 0, -655348, 0, 0, -655347, 0, 0, -655346, 0, 0, -655345, 0, 0, -524304, 0, 0, -589809, 0, 0, -458768, 0, 0, -524273, 0, 0, -393232, 0, 0, -458737, 0, 0, -327696, 0, 0, -393201, 0, 0, -262160, 0, 0, -327665, 0, 0, -196624, 0, 0, -262129, 0, 0, -131088, 0, 0, -196593, 0, 0, -65552, 0, 0, -131057, 0, 0, -16, 0, 0, -65521, 0, 0, 65520, 0, 0, 15, 0, 0, 131056, 0, 0, 65551, 0, 0, 196592, 0, 0, 131087, 0, 0, 262128, 0, 0, 196623, 0, 0, 327664, 0, 0, 262159, 0, 0, 393200, 0, 0, 327695, 0, 0, 458736, 0, 0, 393231, 0, 0, 524272, 0, 0, 458767, 0, 0, 589808, 0, 0, 524303, 0, 0, 655344, 0, 0, 655345, 0, 0, 655346, 0, 0, 655347, 0, 0, 655348, 0, 0, 655349, 0, 0, 655350, 0, 0, 655351, 0, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0 )

[node name="Node2D" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_right = 26.0
margin_bottom = 580.0
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
margin_left = 30.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 10000.0
value = 1.0

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 584.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Label2" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_right = 62.0
margin_bottom = 16.0
size_flags_vertical = 5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "FIRERATE:"

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 1024.0
margin_bottom = 16.0
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0

[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HBoxContainer/HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
